# feup-cal-proj

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  run.bat  run.sh  server.bat  server.sh  tests.cpp  winbuild.bat
.github/workflows/: cmake.yml  report.yml
GraphViewerCpp/: CMakeLists.txt
docs/First Delivery/latex/: main.tex
docs/Second Delivery/latex/: main.tex
docs/latex/: main.tex
docs/latex/resources/bib/: references.bib
resources/: database.txt
resources/Espinho/Full/: espinho_full_nodes_latlng.txt
resources/Espinho/SCC/: espinho_strong_nodes_latlng.txt
resources/Penafiel/Full/: penafiel_full_nodes_latlng.txt
resources/Penafiel/SCC/: penafiel_strong_nodes_latlng.txt
resources/Porto/Full/: porto_full_nodes_latlng.txt
resources/Porto/SCC/: porto_strong_nodes_latlng.txt
src/auth/: currentSession.cpp  currentSession.h
src/exception/adminAlreadySet/: adminAlreadySet.cpp  adminAlreadySet.h
src/exception/adminNotSet/: adminNotSet.cpp  adminNotSet.h
src/exception/incompatibleNodeToEdgeFile/: incompatibleNodeToEdgeFile.cpp  incompatibleNodeToEdgeFile.h
src/exception/invalidAge/: invalidAge.cpp  invalidAge.h
src/exception/invalidDonationValue/: invalidDonationValue.cpp  invalidDonationValue.h
src/exception/invalidFeedback/: invalidFeedback.cpp  invalidFeedback.h
src/exception/invalidPurchaseAvailability/: invalidPurchaseAvailability.cpp  invalidPurchaseAvailability.h
src/exception/invalidStreamAdd/: invalidStreamToAdd.cpp  invalidStreamToAdd.h
src/exception/invalidStreamBuild/: invalidStreamBuild.cpp  invalidStreamBuild.h
src/exception/nicknameAlreadyAdded/: nicknameAlreadyAdded.cpp  nicknameAlreadyAdded.h
src/exception/nicknameNotFound/: nicknameNotFound.cpp  nicknameNotFound.h
src/exception/noFoundPath/: noFoundPath.cpp  noFoundPath.h
src/exception/noNodeWithID/: noNodeWithID.cpp  noNodeWithID.h
src/exception/noOrderToProcess/: noOrderToProcess.cpp  noOrderToProcess.h
src/exception/noParkFound/: noParkFound.cpp  noParkFound.h
src/exception/noStreamWithID/: noStreamWithID.cpp  noStreamWithID.h
src/exception/orderLimitReached/: orderLimitReached.cpp  orderLimitReached.h
src/exception/orderNotFound/: orderNotFound.cpp  orderNotFound.h
src/exception/streamAlreadyFinished/: streamAlreadyFinished.cpp  streamAlreadyFinished.h
src/exception/streamNotFound/: streamNotFound.cpp  streamNotFound.h
src/exception/streamerAlreadyStreaming/: streamerAlreadyStreaming.cpp  streamerAlreadyStreaming.h
src/exception/streamerHasNoDonations/: streamerHasNoDonations.cpp  streamerHasNoDonations.h
src/exception/streamerNotStreaming/: streamerNotStreaming.cpp  streamerNotStreaming.h
src/exception/userAlreadyExists/: userAlreadyExists.cpp  userAlreadyExists.h
src/exception/userNotFound/: userNotFound.cpp  userNotFound.h
src/exception/viewerAlreadyOrdered/: viewerAlreadyOrdered.cpp  viewerAlreadyOrdered.h
src/model/: userDatabase.cpp  userDatabase.h
src/model/admin/: admin.cpp  admin.h  adminManager.cpp  adminManager.h
src/model/db/: userDatabase.cpp  userDatabase.h
src/model/journeyFinder/: journeyFinder.cpp  journeyFinder.h  parkFinalInfo.cpp  parkFinalInfo.h
src/model/user/: user.cpp  user.h  userManager.cpp  userManager.h
src/ui/: UI.h  UIManager.cpp  UIManager.h
src/ui/adminView/: adminView.cpp  adminView.h
src/ui/initialPage/: initialPage.cpp  initialPage.h
src/ui/loginPage/: loginPage.cpp  loginPage.h
src/ui/registerPage/: registerPage.cpp  registerPage.h
src/ui/userView/: userView.cpp  userView.h
src/utils/algorithm/: Connectivity.tpp  Distances.cpp  Distances.h  MinimumSpanningTrees.h  MinimumSpanningTrees.tpp  NearestNeighbour.h  Pathfinding.cpp  Pathfinding.h  TravelingSalesman.h
src/utils/disjointSet/: DisjointSet.cpp  DisjointSet.h  DisjointSet.tpp  DisjointSetGroup.cpp  DisjointSetGroup.h  SetType.h
src/utils/graph/: Edge.tpp  Graph.tpp  Node.tpp  Position.cpp  Position.h  UndirectedGraph.tpp
src/utils/graphLoad/: GraphLoader.tpp  GraphManager.cpp  GraphManager.h  MapData.h  NodeMode.h
src/utils/utilitaryStructures/: HeuristicNode.h  utilFunctions.cpp  utilFunctions.h
test/: AlgorithmComplexity.cpp  Dijkstra.cpp  DisjointSetTest.cpp  MinimumSpanningTreesTest.cpp  NearestNeighbourTest.cpp  TravelingSalesmanTest.cpp  UndirectedGraphTest.cpp
view/: index.html  index.js  sample.json
view/resources/: journey.json  tsp_test.json
